// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:inputDate 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  date
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__DateControl is-date __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker"
              tabindex="0"
            >
              <input
                autocomplete="off"
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-input"
                placeholder="请选择日期"
                type="text"
                value="2019-06-07"
              />
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-clear"
              >
                <icon-mock
                  class="icon icon-input-clear"
                  icon="input-clear"
                />
              </a>
              <a
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-toggler"
              >
                <icon-mock
                  class="icon icon-date"
                  icon="date"
                />
              </a>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate compatible with format & inputFormat 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date1"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__DateControl is-date __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-clear"
                        >
                          <icon-mock
                            class="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-toggler"
                        >
                          <icon-mock
                            class="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date1"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date2"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__DateControl is-date __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-clear"
                        >
                          <icon-mock
                            class="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-toggler"
                        >
                          <icon-mock
                            class="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date2"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with clearable: clearable false 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__DateControl is-date __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="2022-08-19"
                        />
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-toggler"
                        >
                          <icon-mock
                            class="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with clearable: clearable true 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__DateControl is-date __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value=""
                        />
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-toggler"
                        >
                          <icon-mock
                            class="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          <span
                            class="text-muted"
                          >
                            -
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:inputDate with valueFormat & displayFormat 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--horizontal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          日期
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__DateControl is-date __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker"
                        tabindex="0"
                      >
                        <input
                          autocomplete="off"
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-input"
                          placeholder="请选择日期"
                          type="text"
                          value="19/08-2022"
                        />
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-clear"
                        >
                          <icon-mock
                            class="icon icon-input-clear"
                            icon="input-clear"
                          />
                        </a>
                        <a
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__DatePicker-toggler"
                        >
                          <icon-mock
                            class="icon icon-date"
                            icon="date"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
                  data-amis-name="date"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label __PRISMUI_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
                  >
                    <span />
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-value"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-static"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                        >
                          今天是2022年, 08月, 19日
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
